--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.7.2",
     "vite": "^3",
